testdata/golden/sema/invalid/bool_condition_no_bool_method.sg
// using a non-bool expression as condition without __bool
fn invalid_condition() {
    let number: int = 1;
    if (number) {
        return;
    }
}
